# -

1/path_delivery-maxonchikthebest/src/: library.cpp
2/subarrays_task-maxonchikthebest/: CMakeLists.txt  readme.md
2/subarrays_task-maxonchikthebest/src/: library.cpp  library.hpp
2/subarrays_task-maxonchikthebest/tests/: test_basic.cpp
3/josephus_problem-maxonchikthebest/: CMakeLists.txt
3/josephus_problem-maxonchikthebest/src/: library.cpp  library.hpp
3/josephus_problem-maxonchikthebest/tests/: test_basic.cpp
